--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.0.x-dev"
+            "dev-master": "2.0.x-dev",
+            "dev-v1": "1.1.x-dev"
         }
     }
 }
